# mSDK-core

./: meson.build  readme.md
inc/: CFCMacro.h  Ccx.h  Ccxhdr.h  CfcError.h  Cncf.h  Cncy.h  Cnpdll.h  CommonSDK.hpp  EVTCCX.H  Events.hpp  FileIO.hpp  FilterMgr.h  Filters.hpp  Props.h  SlimWindows.hpp  SoundConverter.h  Surface.h  Surface.hpp  TigsExt.hpp  WinMacro.h  cncr.h  colors.h  mSDK.h
lib/: mmfs2dump.txt
